# markdown-viewer

./: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commits.rs  db.rs  git.rs  lib.rs  main.rs  reminders.rs  sessions.rs  summarize.rs  watcher.rs
src/lib/: AnnotationPopover.svelte  BulkOpenModal.svelte  CommandPalette.svelte  CommitTimeline.svelte  DiffSummaryCard.svelte  DiffView.svelte  Editor.svelte  FeedbackPanel.svelte  FileItem.svelte  FileList.svelte  FindBar.svelte  KeyboardHandler.svelte  MainPane.svelte  NoteToolbar.svelte  ReminderPicker.svelte  RenderedMarkdown.svelte  ReviewBar.svelte  SectionTabs.svelte  SettingsModal.svelte  ShortcutHelp.svelte  Sidebar.svelte  TabBar.svelte  TableOfContents.svelte  Toast.svelte  actions.test.ts  actions.ts  feedbackWriter.ts  registry.ts  stores.test.ts  stores.ts  utils.ts
