[package]
name = "markinbox"
version = "0.1.0"
description = "Superhuman for Markdown"
authors = ["Engram"]
edition = "2021"

[lib]
name = "markinbox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
git2 = "0.19"
notify = "7"
glob = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
